--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
+<p-toast></p-toast>
+
 <p-toolbar class="mb-4">
   <div class="p-toolbar-group-start">
-    <div class="logo-section">
+    <div class="logo-section" routerLink="/" style="cursor: pointer;">
       <img src="assets/images/0_168_Asian_Mart_Logo.jpg"
            alt="{{ title }}"
            class="logo-image">
@@ -8,14 +10,28 @@
     </div>
   </div>
   <div class="p-toolbar-group-end">
+    <!-- Show login button when not logged in -->
     <p-button
+      *ngIf="!currentUser"
       label="Login"
       icon="pi pi-user"
-      class="p-button-outlined login-btn">
+      class="p-button-outlined login-btn"
+      (onClick)="navigateToLogin()">
     </p-button>
+
+    <!-- Show user menu when logged in -->
+    <div *ngIf="currentUser" class="user-menu-wrapper">
+      <p-button
+        [label]="getUserDisplayName()"
+        icon="pi pi-user"
+        class="p-button-text user-menu-btn"
+        (onClick)="userMenu.toggle($event)">
+      </p-button>
+      <p-menu #userMenu [model]="userMenuItems" [popup]="true" appendTo="body"></p-menu>
+    </div>
   </div>
 </p-toolbar>
 
-<div class="container mx-auto p-4">
-  <router-outlet />
+<div class="main-container">
+  <router-outlet></router-outlet>
 </div>
